--- a/zszhApp_v2/src/zszh_Products/ItemRender_Products.mxml
+++ b/zszhApp_v2/src/zszh_Products/ItemRender_Products.mxml
@@ -21,11 +21,15 @@
 			
 			protected function itemrenderer1_mouseDownHandler(event:MouseEvent):void
 			{
-				var dragInitiator:UIComponent=UIComponent(event.currentTarget);
-				var className:String="Room_Small2D";
+				var dragInitiator:UIComponent=UIComponent(event.currentTarget);			
+				
+				
 				var ds:DragSource = new DragSource();
 				ds.addData(dragInitiator, "myRule");//传递的数据
-				ds.addData(className, "className");//传递的数据
+				ds.addData(data.className, "className");//传递的数据
+				ds.addData(data.resourcePath, "resourcePath");//传递的数据
+				ds.addData(data.objectName, "objectName");//传递的数据
+				
 				var dragProxy:Image=new Image();
 				dragProxy.width=60;
 				dragProxy.height=60;
