--- a/zszhApp_v2/src/zszh_Products/Navigator_BasicWall.mxml
+++ b/zszhApp_v2/src/zszh_Products/Navigator_BasicWall.mxml
@@ -66,11 +66,12 @@
 			</s:layout>
 			
 			<s:ArrayCollection>
-				<fx:Object labelText="L型房间" imgSource="zszh_res/basic/wall/room_1.png"/>
-				<fx:Object labelText="大房间" imgSource="zszh_res/basic/wall/room_big.png"/>
-				<fx:Object labelText="小房间" imgSource="zszh_res/basic/wall/room_small.png"/>
-				<fx:Object labelText="横墙" imgSource="zszh_res/basic/wall/wall_h_divider.png"/>
-				<fx:Object labelText="竖墙" imgSource="zszh_res/basic/wall/wall_v_divider.png"/>
+				<fx:Object labelText="L型房间" imgSource="zszh_res/basic/wall/room_1.png" className="Room_2D" resourcePath=""/>
+				<fx:Object labelText="大房间" 	 imgSource="zszh_res/basic/wall/room_big.png" className="Room_2D" resourcePath=""/>
+				<fx:Object labelText="小房间"  imgSource="zszh_res/basic/wall/room_small.png" className="Room_2D" resourcePath=""/>
+				<fx:Object labelText="横墙"   imgSource="zszh_res/basic/wall/wall_h_divider.png" className="Room_2D" resourcePath=""/>
+				<fx:Object labelText="竖墙"   imgSource="zszh_res/basic/wall/wall_v_divider.png" className="model_bed" resourcePath=""/>
+				<fx:Object labelText="床00001" imgSource="zszh_res/models/beds/bed00001/bed00001_preview.png" className="model_bed" resourcePath="zszh_res/models/beds/bed00001/" objectName="bed00001"/>
 
 			</s:ArrayCollection>
 		</s:List>
