--- a/zszhApp_v2/src/zszh_WorkSpace2D/WS2D_PopupWindow.mxml
+++ b/zszhApp_v2/src/zszh_WorkSpace2D/WS2D_PopupWindow.mxml
@@ -1,17 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <s:SkinnableContainer xmlns:fx="http://ns.adobe.com/mxml/2009" 
 					  xmlns:s="library://ns.adobe.com/flex/spark" 
-					  xmlns:mx="library://ns.adobe.com/flex/mx" width="400" height="300" xmlns:local="*" xmlns:ns="zszh_WorkSpace2D.*">
+					  xmlns:mx="library://ns.adobe.com/flex/mx" width="400" height="300">
 	<fx:Script>
 		<![CDATA[
 			private function ShowScale():void {
-				}
+			}
 		]]>
 	</fx:Script>
 	<fx:Declarations>
 		<!-- Place non-visual elements (e.g., services, value objects) here -->
 	</fx:Declarations>
-	
-	<ns:WorkSpace2D id="WorkSpace2D" width="100%" height="100%"/>
-	<s:Button name="scaleButton" x="20" bottom="10" label="标尺" width="80" height="20" click="ShowScale()" />
+	<s:Button name="myButton" x="20" bottom="10" label="popup" width="80" height="20" click="ShowScale()" />
 </s:SkinnableContainer>
