--- a/zszhApp_v2/src/zszh_Products_old/Navigator_BasicTab.mxml
+++ b/zszhApp_v2/src/zszh_Products_old/Navigator_BasicTab.mxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <s:NavigatorContent xmlns:fx="http://ns.adobe.com/mxml/2009" 
 					xmlns:s="library://ns.adobe.com/flex/spark" 
-					xmlns:mx="library://ns.adobe.com/flex/mx" width="400" height="300" xmlns:ns="zszh_Products.*" >
+					xmlns:mx="library://ns.adobe.com/flex/mx" width="400" height="300" xmlns:ns="zszh_Products_old.*" >
 	<fx:Declarations>
 		<!-- Place non-visual elements (e.g., services, value objects) here -->
 	</fx:Declarations>
@@ -24,21 +24,21 @@
 			fontWeight:bold;
 			
 			
-			up-Skin:ClassReference("zszh_Products.Skin_TabNavigator");
+			up-Skin:ClassReference("zszh_Products_old.Skin_TabNavigator");
 			
-			down-skin:ClassReference("zszh_Products.Skin_TabNavigator");
+			down-skin:ClassReference("zszh_Products_old.Skin_TabNavigator");
 			
-			over-skin:ClassReference("zszh_Products.Skin_TabNavigator");
+			over-skin:ClassReference("zszh_Products_old.Skin_TabNavigator");
 			
-			disabled-skin:ClassReference("zszh_Products.Skin_TabNavigator");
+			disabled-skin:ClassReference("zszh_Products_old.Skin_TabNavigator");
 			
-			selected-up-skin:ClassReference("zszh_Products.Skin_TabNavigator");
+			selected-up-skin:ClassReference("zszh_Products_old.Skin_TabNavigator");
 			
-			selected-down-skin:ClassReference("zszh_Products.Skin_TabNavigator");
+			selected-down-skin:ClassReference("zszh_Products_old.Skin_TabNavigator");
 			
-			selected-over-skin:ClassReference("zszh_Products.Skin_TabNavigator");
+			selected-over-skin:ClassReference("zszh_Products_old.Skin_TabNavigator");
 			
-			selected-disabled-skin:ClassReference("zszh_Products.Skin_TabNavigator");
+			selected-disabled-skin:ClassReference("zszh_Products_old.Skin_TabNavigator");
 			
 		}
 	</fx:Style>
